feat: update recommand
